@@ -1,3 +1,8 @@
+2011-02-04  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/openpgp.c (cmd_reset_user_password): Fix PINPAD_SUPPORT case
+	with reset code.
+
 2011-02-01  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* Version 0.9.
